Fix user type mapper is case sensitive
Fix tests
Add id to ProjectDto